tests/positive/basic/functions/input.ci
/* Fibonacci — iterative */
int fib(int n) {
    if (n <= 1) {
        return n;
    }
    int a = 0;
    int b = 1;
    for (int i = 2; i <= n; i++) {
        int tmp = a + b;
        a = b;
        b = tmp;
    }
    return b;
}

void main() {
    print(toString(fib(10)) + "\n");
}
